# asteroids_3d

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  index.html
.github/workflows/: ci.yml
assets/: Itokawa_1_1.glb  Itokawa_broken_1.glb  LICENSES.md  LICENSE_ITOKAWA.txt  LICENSE_SHIP.txt  ship.glb
assets/controls/: LICENSE_KEYS.txt
src/: asteroids.rs  bounds.rs  controls.rs  custom_asset.rs  end.rs  events.rs  game_area.rs  home.rs  in_game.rs  lib.rs  main.rs  pause.rs  physics.rs  util.rs  wasm.rs
src/controls/: camera.rs
src/in_game/: asteroids.rs  bounds.rs  controls.rs  events.rs  game_area.rs  points.rs
src/in_game/controls/: camera.rs
web/: .gitignore  README.md  package.json  postcss.config.cjs  svelte.config.cjs  svelte.config.js  tailwind.config.cjs  tsconfig.json
web/src/: app.css  app.html  global.d.ts
web/src/lib/: LICENSES.md  Matomo.svelte  TechStatus.svelte  loadScript.ts
web/src/routes/: $layout.svelte  __layout.svelte  index.svelte
web/static/: _headers
